# models/user_assets.ts
@@ -5,22 +5,17 @@ interface UsersAttributes {
 
   userId: number;
   product_id: string;
-  amount: string;
   quantity: string;
   active: number
-  reason: string
-
+  
 }
 
 module.exports = (sequelize: Sequelize, DataTypes: any) => {
   class Users extends Model<UsersAttributes> implements UsersAttributes {
     userId!: number;
-    product_id!: string;
-    amount!: string;
-    quantity!: string;
-    active!: number
-    reason!: string
-
+  product_id!: string;
+  quantity!: string;
+  active!: number
 
     static associate(models: any) {
       // Define associations here
@@ -32,17 +27,15 @@ module.exports = (sequelize: Sequelize, DataTypes: any) => {
 
   Users.init(
     {
-      userId: { type: DataTypes.INTEGER },
+      userId:{ type: DataTypes.INTEGER },
       product_id: { type: DataTypes.STRING },
-      amount: { type: DataTypes.STRING },
-      quantity: { type: DataTypes.STRING },
+      quantity: { type: DataTypes.TEXT },
       active: { type: DataTypes.INTEGER },
-      reason: { type: DataTypes.STRING },
 
     },
     {
       sequelize,
-      modelName: "buys",
+      modelName: "user_assets",
     }
   );
 
